--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "server.js",
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "if-env": "^1.0.4",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
     "react": "^16.12.0",
