--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build",
-    "seeds": "cd seeders && node seeds.js"
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
