--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "form-data": "^3.0.0",
     "if-env": "^1.0.4",
     "jimp": "^0.9.3",
     "multer": "^1.4.2",
